--- a/EXERCICIOS/EX 022/fundo006.html
+++ b/EXERCICIOS/EX 022/fundo006.html
@@ -3,23 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>fundo fixo de tela</title>
 
     <style>
       body {
-        background-color: black;
+      /*  background-color: black;
         background-image: url(imagens/wallpaper002.jpg);
         background-position: center center;
         background-repeat: no-repeat;
         background-size: cover;
         height: 98vh;
+        background-attachment:fixed;
+        /*short hand
+        color>image>position>repeat>[size]>attachment*/
 
+        background: black url(imagens/wallpaper002.jpg) center center no-repeat fixed;
+        background-size: cover;
       }
       main{
         background-color: white;
         margin: auto;
         padding: 10px;
-        width: 400px;
+        max-width: 600px;
         border:2px solid darkblue ;
         border-radius: 15px;
       }
@@ -34,6 +39,18 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam dolorem pariatur odio, ut consectetur distinctio perferendis ullam, velit sunt qui quam laudantium? Commodi provident quibusdam enim doloribus, rem eius dolore.
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique quis, voluptate numquam repellendus beatae eveniet odio alias omnis voluptatem fugiat, libero dicta neque vero facilis nulla nobis animi vel ut.
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis exercitationem molestias totam, iusto aut quia similique culpa ut nostrum accusamus temporibus cupiditate sint et maxime nemo doloribus unde minima eius.
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam, blanditiis et ducimus iure id dolor est, nisi excepturi delectus aut, voluptatibus ut unde. Asperiores corporis vitae quisquam error temporibus quibusdam.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem at dolores quidem! Dolor fugiat culpa asperiores optio excepturi sit sint, porro minus obcaecati laboriosam officia amet illo fugit delectus molestiae.lorem
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit autem error atque ipsum assumenda ex consequatur amet iusto doloremque ipsam provident sapiente qui ratione vel eos, ea quis dolorum magnam.
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum esse provident laboriosam, deleniti maxime distinctio error expedita possimus impedit explicabo asperiores est praesentium nulla officia obcaecati non facere suscipit quidem?
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione reprehenderit ad dolorem placeat est eum natus vitae, voluptas accusantium adipisci, consectetur ducimus voluptatibus non perspiciatis itaque tempore? Dolorum, exercitationem reiciendis.
+
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam accusamus nulla itaque assumenda, dicta dignissimos sequi illum quis, commodi totam ex maxime aspernatur neque aliquid odio? Velit, distinctio mollitia! Vero?
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste quidem eum debitis similique aspernatur. Et hic recusandae veniam dolores, voluptates tempore reprehenderit eveniet laudantium fuga ad! Accusantium voluptas ad harum?
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex obcaecati hic nostrum. Nemo quibusdam temporibus alias asperiores facere. Recusandae eos, expedita perspiciatis pariatur magnam eum officiis cumque cupiditate fugit sequi.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi et praesentium distinctio minus suscipit voluptas aut nemo perferendis quisquam, optio sit quos quia impedit quam quis eos necessitatibus quasi officia!
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus ad nobis accusamus, distinctio quos minus deserunt eaque optio quidem, eligendi eveniet provident quae? Libero velit non, corrupti ut provident ipsum!
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore, pariatur id? Voluptatibus consectetur exercitationem tempore labore quos in earum dignissimos non nihil nisi ipsam mollitia quae, eveniet perferendis soluta incidunt!
         </p>
     </main>
   </body>
